--- a/demo/index.html
+++ b/demo/index.html
@@ -2,39 +2,82 @@
 <html lang="cn">
 <head>
     <meta charset="UTF-8">
-    <title>an控件库demo</title>
+    <title>anUI</title>
     <script type="text/javascript" src="/plugins/jquery-2.2.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/javascript-obfuscator/dist/index.browser.js"></script>
+    <style>
+    *{
+        margin: 0;
+        padding: 0;
+        font-family: Arial,Times New Roman, Verdana;
+        text-decoration:none;
+    }
+    center{padding-top: 50px;}
+    center p{color: #888;}
+    a:visited,a:link{color: #000;}
+    .top{line-height: 60px;border-bottom: 1px solid #ccc;padding: 0 10px;}
+    .top h1{float: left;margin-right: 20px;}
+    .top a{padding:5px;}
+    a.router-link-active{color: #f63; font-weight:700;}
+    .nav .nav>li>a.router-link-active {color: #563d7c;}
+    .left ul{
+        padding: 0;
+        margin: 0;
+        list-style: none;
+    }
+    .main{margin: 0 10px;}
+    .nav{    
+        width: 200px;
+        float: left;
+        min-height:200px;
+        background: #eee;
+    }
+    .content{
+        margin-left: 200px;
+        border: 1px solid rgb(225, 225, 232);
+        border-top: 0;
+        min-height:230px;
+    }
+    .nav>li {
+    position: relative;
+    display: block;
+    padding: 3px 0;
+    }
+    .nav>.active>a{
+    display: block;
+    padding: 4px 20px;
+    font-size: 15px;
+    padding-left: 18px;
+    font-weight: 700;
+    color: #563d7c;
+    background-color: transparent;
+    border-left: 2px solid #563d7c;
+    }
+
+    .nav .nav>li>a {
+    color: #999;
+    padding-left: 20px;
+    font-size: 13px;
+    font-weight: 400;
+    }
+    </style>
 </head>
 <body>
-    <div id="firstVue">控件库
-        <br/>
-        {{myData}}
-        <my-component></my-component>
-    </div>
-    <script>
-        var obfuscationResult = JavaScriptObfuscator.obfuscate(
-    `
-        (function(){
-            var variable1 = '5' - 3;
-            var variable2 = '5' + 3;
-            var variable3 = '5' + - '2';
-            var variable4 = ['10','10','10','10','10'].map(parseInt);
-            var variable5 = 'foo ' + 1 + 1;
-            console.log(variable1);
-            console.log(variable2);
-            console.log(variable3);
-            console.log(variable4);
-            console.log(variable5);
-        })();
-    `,
-    {
-        compact: false,
-        controlFlowFlattening: true
-    }
-);
-
-console.log(obfuscationResult.getObfuscatedCode());
-    </script>
+    <div id="app">
+        <div class="top">
+        <h1>anUI</h1>
+        <div>
+          <!-- 使用 router-link 组件来导航. -->
+          <!-- 通过传入 `to` 属性指定链接. -->
+          <!-- <router-link> 默认会被渲染成一个 `<a>` 标签 -->
+          <router-link to="/" exact>首页</router-link>
+          <router-link :class="[$route.meta.active ==='demo'? 'router-link-active' : '']"  to="/demo/index" exact>anUI Demo</router-link>
+          <router-link :class="[$route.meta.active ==='plugins'? 'router-link-active' : '']" to="/plugins/index">anUI 插件</router-link>
+        </div>
+       </div>
+        <!-- 路由出口 -->
+        <!-- 路由匹配到的组件将渲染在这里 -->
+        <router-view></router-view>
+      </div>
 </body>
 </html>
