--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/javascript-obfuscator/dist/index.browser.js"></script>
 </head>
 <body>
-    <div id="app">
+    <div id="app" class="page">
         <div class="top">
         <h1>anUI</h1>
         <div>
@@ -15,8 +15,8 @@
           <!-- 通过传入 `to` 属性指定链接. -->
           <!-- <router-link> 默认会被渲染成一个 `<a>` 标签 -->
           <router-link to="/" exact>首页</router-link>
-          <router-link :class="[$route.meta.active ==='demo'? 'router-link-active' : '']"  to="/demo/index" exact>anUI Demo</router-link>
-          <router-link :class="[$route.meta.active ==='plugins'? 'router-link-active' : '']" to="/plugins/index">anUI 插件</router-link>
+          <router-link :class="[$route.meta.active ==='demo'? 'router-link-active' : '']"  to="/demo/encrypt" exact>anUI Demo</router-link>
+          <router-link :class="[$route.meta.active ==='plugins'? 'router-link-active' : '']" to="/plugins/base">anUI 插件</router-link>
         </div>
        </div>
         <!-- 路由出口 -->
