--- a/demo/index.html
+++ b/demo/index.html
@@ -14,9 +14,12 @@
           <!-- 使用 router-link 组件来导航. -->
           <!-- 通过传入 `to` 属性指定链接. -->
           <!-- <router-link> 默认会被渲染成一个 `<a>` 标签 -->
-          <router-link to="/" exact>首页</router-link>
-          <router-link :class="[$route.meta.active ==='demo'? 'router-link-active' : '']"  to="/demo/encrypt" exact>anUI Demo</router-link>
-          <router-link :class="[$route.meta.active ==='plugins'? 'router-link-active' : '']" to="/plugins/base">anUI 插件</router-link>
+          <!-- <router-link :class="[$route.meta.active ==='home'? 'router-link-active' : '']" to="/" exact>首页</router-link>
+          <router-link :class="[$route.meta.active ==='demo'? 'router-link-active' : '']"  to="/demo/encrypt">anUI Demo</router-link>
+          <router-link :class="[$route.meta.active ==='plugins'? 'router-link-active' : '']" to="/plugins/base">anUI 插件</router-link> -->
+          <router-link exact v-if="item.path!='/'" v-for="item in $route.query.head" :class="[$route.meta.active ===item.meta.active ? 'router-link-active' : '']"  :to="{path:item.path}">
+              {{item.meta.title}}
+          </router-link>
         </div>
        </div>
         <!-- 路由出口 -->
