--- a/demo/index.html
+++ b/demo/index.html
@@ -5,17 +5,8 @@
     <title>anUI</title>
     <script type="text/javascript" src="/js/jquery-2.2.4.min.js"></script>
     <!--Open Sans Font [ OPTIONAL ]-->
-    <script src="https://cdn.jsdelivr.net/npm/javascript-obfuscator/dist/index.browser.js"></script>
-<script src="https://skalman.github.io/UglifyJS-online/uglify/lib/minify.js"></script>
-<script src="https://skalman.github.io/UglifyJS-online/uglify/lib/utils.js"></script>
-<script src="https://skalman.github.io/UglifyJS-online/uglify/lib/ast.js"></script>
-<script src="https://skalman.github.io/UglifyJS-online/uglify/lib/parse.js"></script>
-<script src="https://skalman.github.io/UglifyJS-online/uglify/lib/transform.js"></script>
-<script src="https://skalman.github.io/UglifyJS-online/uglify/lib/scope.js"></script>
-<script src="https://skalman.github.io/UglifyJS-online/uglify/lib/output.js"></script>
-<script src="https://skalman.github.io/UglifyJS-online/uglify/lib/compress.js"></script>
-<script src="https://skalman.github.io/UglifyJS-online/uglify/lib/propmangle.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700" rel="stylesheet" type="text/css">
+    <!-- <script src="https://cdn.jsdelivr.net/npm/javascript-obfuscator/dist/index.browser.js"></script> -->
+
 </head>
 <body>
     <div id="app" class="page">
