--- a/demo/index.html
+++ b/demo/index.html
@@ -5,6 +5,7 @@
     <title>anUI</title>
     <script type="text/javascript" src="/js/jquery-2.2.4.min.js"></script>
     <!--Open Sans Font [ OPTIONAL ]-->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700" rel="stylesheet" type="text/css">
     <!-- <script src="https://cdn.jsdelivr.net/npm/javascript-obfuscator/dist/index.browser.js"></script> -->
 
 </head>
