--- a/demo/index.html
+++ b/demo/index.html
@@ -11,8 +11,9 @@
     <!--DataTables[ OPTIONAL ]-->
     <script src="https://lastsoup.github.io/Nifty/plugins/datatables/media/js/jquery.dataTables.js"></script>
     <script src="https://lastsoup.github.io/Nifty/plugins/datatables/media/js/dataTables.bootstrap.js"></script>
-    <script src="https://lastsoup.github.io/Nifty/plugins/datatables/extensions/Responsive/js/dataTables.responsive.min.js"></script>
+    <script src="/js/plugins/dataTables.responsive.js"></script>
     <script src="/js/plugins/anui.datatables.js"></script>
+    <script src="/js/plugins/footable.js"></script>
 </head>
 <body>
     <div id="app" class="page">
