--- a/demo/index.html
+++ b/demo/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>anUI</title>
     <script type="text/javascript" src="https://lastsoup.github.io/Nifty/js/jquery-2.2.4.min.js"></script>
+    <script type="text/javascript" src="https://lastsoup.github.io/Nifty/js/bootstrap.js"></script>
     <!--Open Sans Font [ OPTIONAL ]-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700" rel="stylesheet" type="text/css">
     <!--DataTables[ OPTIONAL ]-->
@@ -12,8 +13,12 @@
     <script src="https://lastsoup.github.io/Nifty/plugins/datatables/media/js/jquery.dataTables.js"></script>
     <script src="https://lastsoup.github.io/Nifty/plugins/datatables/media/js/dataTables.bootstrap.js"></script>
     <script src="/js/plugins/dataTables.responsive.js"></script>
-    <script src="/js/plugins/anui.datatables.js"></script>
+    <!--FooTables[ OPTIONAL ]-->
     <script src="/js/plugins/footable.js"></script>
+    <!--BootstrapTables[ OPTIONAL ]-->
+    <script src="http://bootstrap-table.wenzhixin.net.cn/zh-cn/dist/bootstrap-table.js"></script>
+    <script src="https://lastsoup.github.io/Nifty/plugins/x-editable/js/bootstrap-editable.js"></script>
+    <script src=" https://lastsoup.github.io/Nifty/plugins/bootstrap-table/extensions/editable/bootstrap-table-editable.js"></script>
 </head>
 <body>
     <div id="app" class="page">
