--- a/demo/index.html
+++ b/demo/index.html
@@ -7,6 +7,8 @@
     <script type="text/javascript" src="https://lastsoup.github.io/Nifty/js/bootstrap.js"></script>
     <!--Open Sans Font [ OPTIONAL ]-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700" rel="stylesheet" type="text/css">
+    <link href="https://lastsoup.github.io/Nifty/css/demo/nifty-demo-icons.min.css" rel="stylesheet" type="text/css">
+    <!-- <link href="https://lastsoup.github.io/Nifty/css/bootstrap.css" rel="stylesheet" type="text/css"> -->
     <!--DataTables[ OPTIONAL ]-->
     <script src="https://cdn.jsdelivr.net/npm/javascript-obfuscator/dist/index.browser.js"></script>
     <!--DataTables[ OPTIONAL ]-->
