--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,7 @@
     <!--Open Sans Font [ OPTIONAL ]-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700" rel="stylesheet" type="text/css">
     <link href="https://lastsoup.github.io/Nifty/css/demo/nifty-demo-icons.min.css" rel="stylesheet" type="text/css">
-    <!-- <link href="https://lastsoup.github.io/Nifty/css/bootstrap.css" rel="stylesheet" type="text/css"> -->
+    <!-- <link href="https://lastsoup.github.io/Nifty/plugins/bootstrap-table/bootstrap-table.css" rel="stylesheet" type="text/css"> -->
     <!--DataTables[ OPTIONAL ]-->
     <script src="https://cdn.jsdelivr.net/npm/javascript-obfuscator/dist/index.browser.js"></script>
     <!--DataTables[ OPTIONAL ]-->
