--- a/demo/index.html
+++ b/demo/index.html
@@ -8,26 +8,8 @@
     <!--Open Sans Font [ OPTIONAL ]-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700" rel="stylesheet" type="text/css">
     <link href="https://lastsoup.github.io/Nifty/css/demo/nifty-demo-icons.min.css" rel="stylesheet" type="text/css">
-    <!--DataTables[ OPTIONAL ]-->
+    <!--obfuscator[ OPTIONAL ]-->
     <script src="/js/plugins/javascript-obfuscator/index.browser.js"></script>
-    <!--DataTables[ OPTIONAL ]-->
-    <script src="/js/plugins/datatables/jquery.dataTables.js"></script>
-    <script src="/js/plugins/datatables/dataTables.bootstrap.js"></script>
-    <script src="/js/plugins/datatables/dataTables.responsive.js"></script>
-    <!--FooTables[ OPTIONAL ]-->
-    <script src="/js/plugins/footable/footable.js"></script>
-    <!--BootstrapTables[ OPTIONAL ]-->
-    <script src="/js/plugins/bootstraptables/bootstrap-table.js"></script>
-    <script src="/js/plugins/editable/bootstrap-editable.js"></script>
-    <script src="/js/plugins/bootstraptables/bootstrap-table-editable.js"></script>
-    <!--DataGrid[ OPTIONAL ]-->
-    <link href="/js/plugins/easyui/themes/metro/easyui.css" rel="stylesheet" />
-    <script src="/js/plugins/easyui/base/jquery.parser.js" type="text/javascript"></script>
-    <script src="/js/plugins/easyui/base/jquery.resizable.js" type="text/javascript"></script>
-    <script src="/js/plugins/easyui/base/jquery.linkbutton.js" type="text/javascript"></script>
-    <script src="/js/plugins/easyui/base/jquery.pagination.js" type="text/javascript"></script>
-    <script src="/js/plugins/easyui/base/jquery.panel.js" type="text/javascript"></script>
-    <script src="/js/plugins/easyui/plugins/jquery.datagrid.js" type="text/javascript"></script>
 </head>
 <body>
     <div id="app" class="page">
