--- a/demo/pages/BootstrapTables.html
+++ b/demo/pages/BootstrapTables.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>anUI</title>
-    <script type="text/javascript" src="https://lastsoup.github.io/Nifty/js/jquery-2.2.4.min.js"></script>
-    <script type="text/javascript" src="https://lastsoup.github.io/Nifty/js/bootstrap.js"></script>
+    <script type="text/javascript" src="https://lastsoup.github.io/themes/nifty/js/jquery-2.2.4.min.js"></script>
+    <script type="text/javascript" src="https://lastsoup.github.io/themes/nifty/js/bootstrap.js"></script>
     <!--Open Sans Font [ OPTIONAL ]-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700" rel="stylesheet" type="text/css">
-    <link href="https://lastsoup.github.io/Nifty/css/demo/nifty-demo-icons.min.css" rel="stylesheet" type="text/css">
+    <link href="https://lastsoup.github.io/themes/nifty/css/demo/nifty-demo-icons.min.css" rel="stylesheet" type="text/css">
+    <!--BaseStyle[ OPTIONAL ]-->
     <link href="css/Tables.css" rel="stylesheet" type="text/css">
-    <link href="https://lastsoup.github.io/Nifty/plugins/x-editable/css/bootstrap-editable.css" rel="stylesheet" type="text/css">
+    <link href="https://lastsoup.github.io/themes/nifty/plugins/x-editable/css/bootstrap-editable.css" rel="stylesheet" type="text/css">
     <link href="css/BootstrapTables.css" rel="stylesheet" type="text/css">
     <!--BootstrapTables[ OPTIONAL ]-->
     <script src="/js/plugins/bootstraptables/bootstrap-table.js"></script>
