--- a/demo/pages/DataGrid.html
+++ b/demo/pages/DataGrid.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>anUI</title>
-    <script type="text/javascript" src="https://lastsoup.github.io/Nifty/js/jquery-2.2.4.min.js"></script>
-    <script type="text/javascript" src="https://lastsoup.github.io/Nifty/js/bootstrap.js"></script>
+    <script type="text/javascript" src="https://lastsoup.github.io/themes/nifty/js/jquery-2.2.4.min.js"></script>
+    <script type="text/javascript" src="https://lastsoup.github.io/themes/nifty/js/bootstrap.js"></script>
     <!--Open Sans Font [ OPTIONAL ]-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700" rel="stylesheet" type="text/css">
-    <link href="https://lastsoup.github.io/Nifty/css/demo/nifty-demo-icons.min.css" rel="stylesheet" type="text/css">
+    <link href="https://lastsoup.github.io/themes/nifty/css/demo/nifty-demo-icons.min.css" rel="stylesheet" type="text/css">
     <!--DataGrid[ OPTIONAL ]-->
     <link href="/js/plugins/easyui/themes/metro/easyui.css" rel="stylesheet" />
     <link href="css/Tables.css" rel="stylesheet" type="text/css">
