--- a/demo/pages/demo/tree/zTree_v3/demo/cn/exhide/checkbox.html
+++ b/demo/pages/demo/tree/zTree_v3/demo/cn/exhide/checkbox.html
@@ -4,7 +4,7 @@
 	<TITLE> ZTREE DEMO - Hide With Checkbox Mode</TITLE>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<link rel="stylesheet" href="../../../css/demo.css" type="text/css">
-	<link rel="stylesheet" href="../../../css/zTreeStyle/zTreeStyle.css" type="text/css">
+	<link rel="stylesheet" href="../../../css/anStyle/zTreeStyle.css" type="text/css">
 	<script type="text/javascript" src="../../../js/jquery-1.4.4.min.js"></script>
 	<script type="text/javascript" src="../../../js/jquery.ztree.core.js"></script>
 	<script type="text/javascript" src="../../../js/jquery.ztree.excheck.js"></script>
