--- a/demo/index.html
+++ b/demo/index.html
@@ -23,7 +23,7 @@
           <!-- <router-link :class="[$route.meta.active ==='home'? 'router-link-active' : '']" to="/" exact>首页</router-link>
           <router-link :class="[$route.meta.active ==='demo'? 'router-link-active' : '']"  to="/demo/StaticTables">anUI Demo</router-link>
           <router-link :class="[$route.meta.active ==='plugins'? 'router-link-active' : '']" to="/plugins/base">anUI 插件</router-link> -->
-          <router-link exact v-if="item.path!='/'" v-for="item in $route.query.head" :class="[$route.meta.active ===item.meta.active ? 'router-link-active' : '']"  :to="{path:item.default}">
+          <router-link exact v-if="item.path!='/'" v-for="item in $route.query.head" :class="[$route.meta.active ===item.meta.active ? 'router-link-active' : '']"  :to="{path:item.default}" >
               {{item.meta.title}}
           </router-link>
         </div>
@@ -33,8 +33,11 @@
         <router-view></router-view>
       </div>
     </body>
+    <script src="/js/plugins/easyui/plugins/jquery.tabs.js"></script>
+    <script src="/js/jquery.method.js"></script>
     <script>
         $(function () { 
+        $("iframe").loadIframe();
         $.ajax({
                 type: "POST",
                 contentType:"application/json",
