--- a/demo/index.html
+++ b/demo/index.html
@@ -37,7 +37,7 @@
     <script src="/js/jquery.method.js"></script>
     <script>
         $(function () { 
-        $("iframe").loadIframe();
+        $("#iframeId").loadIframe();
         $.ajax({
                 type: "POST",
                 contentType:"application/json",
