--- a/demo/pages/extension/gantt.html
+++ b/demo/pages/extension/gantt.html
@@ -36,9 +36,11 @@ html, body {
 <script src="/js/plugins/gantt/core.js" type="text/javascript"></script>
 <script src="/js/plugins/gantt/boot.js" type="text/javascript"></script>
 <script src="/js/plugins/gantt/toolbar.js" type="text/javascript"></script>
-<script src="/js/plugins/gantt/ProjectPlan.js" type="text/javascript"></script>
+<script src="/js/plugins/gantt/ProjectServices.js" type="text/javascript"></script>
+<!-- <script src="/js/plugins/gantt/ProjectPlan.js" type="text/javascript"></script> -->
 <script type="text/javascript">
     //加载甘特图
-    loadGantt();
+    //loadGantt();
+     PS();
 </script>
 </html>
