--- a/demo/pages/demo/datagrid/BootstrapTables.html
+++ b/demo/pages/demo/datagrid/BootstrapTables.html
@@ -164,7 +164,7 @@
            //contentType: "application/x-www-form-urlencoded",
            //url:"http://212.64.80.101:8085/api/WebAPI/GetPostParams",
            contentType:"application/json",
-           url:"http://212.64.80.101:8085/api/WebAPI/GetUserList",
+           url:"https://www.kaoshicat.com/api/WebAPI/GetUserList",
            method: "post",
            sidePagination: 'server',
            ajaxOptions:{ 
