--- a/demo/pages/demo/datagrid/DataTables.html
+++ b/demo/pages/demo/datagrid/DataTables.html
@@ -114,7 +114,7 @@
             "processing": true,
             "serverSide":true,
             "ajax": {
-                "url":"http://212.64.80.101:8085/api/WebAPI/GetUserList",
+                "url":"https://www.kaoshicat.com/api/WebAPI/GetUserList",
                 "type": "post",
                 "headers":{"Authorization":"Bearer " + Cookies.get('ANTOKEN')}, 
                 //"dataSrc": "",
