--- a/demo/index.html
+++ b/demo/index.html
@@ -55,7 +55,7 @@
                         contentType:"application/json",
                         dataType: "json",
                         //async:false,
-                        url: "http://212.64.80.101:8085/api/WebAPI/GetJWT",
+                        url: "https://www.kaoshicat.com/api/WebAPI/GetJWT",
                         data: JSON.stringify({ UserName: "admin", PassWord:"12345"}),
                         success: function (msg) {
                             //获取到token mark  1成功   0失败  msg 
