--- a/demo/pages/demo/datagrid/DataGrid.html
+++ b/demo/pages/demo/datagrid/DataGrid.html
@@ -61,7 +61,7 @@
     $(document).ready(function () {
            subdemo.init();
            $('#dg2').datagrid({
-            url:'http://212.64.80.101:8085/api/WebAPI/GetPostParams',
+            url:'https://www.kaoshicat.com/api/WebAPI/GetPostParams',
             headers:{"Authorization":"Bearer " + Cookies.get('ANTOKEN')},
             queryParams: {
             "length" : function(){
