--- a/demo/pages/demo/uploader/Dropzone.html
+++ b/demo/pages/demo/uploader/Dropzone.html
@@ -36,6 +36,7 @@
 <body>
     <!--Dropzonejs-->
     <!--===================================================-->
+    <img id="img" style="width:120px;height:120px;" />
     <div id="my-dropzone"  class="dropzone form-dropzone">
             <input id="hidden_attachList" type="hidden" value="" name="attachList" />
             <div class="dz-default dz-message">
